--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Ke Li (Chloé)
+first_name: Ke Li (Chloe)
 middle_name: 
 last_name: 
-email: keli@link.cuhk.edu.cn
+email: ke.li@insead.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
-keywords: Ke Li, Ke (Chloé) Li, Ke Li (Chloé)  # add your own keywords or leave empty
+keywords: Ke Li, Ke Chloe Li, Ke Li Chloe  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -257,13 +257,13 @@ scholar:
   locale: en
   source: /_bibliography/
 
-  bibliography: cspapers.bib
+  bibliography: conf.bib
   bibliography_template: bib
   bibliography_style: apa
 
-  mgt: mgt.bib
-  mgt_template: bib
-  mgt_style: apa
+  journal: journal.bib
+  journal_template: bib
+  journal_style: apa
 
   
   # Note: if you have latex math in your bibtex, the latex filter
