--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: ke.li@insead.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
-keywords: Ke Li, Ke Chloe Li, Ke Li Chloe  # add your own keywords or leave empty
+keywords: Ke Li, Ke Chloe Li, Ke Li Chloe, Ke Li INSEAD # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🌛  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
